
Version 1.0.1 is primarily a maintenance and bug fix release.

TODO...

This release includes:

- All the great features of the 1.0.0 and previous releases
- Updated Gradle build file for version 1.0-milestone-6 (previously ran on
  1.0-milestone-3)

Bug Fixes:

- Improved entity-auto service error handling
- Fixed issue with entities in different packages that have the same name


===========================================================================
Release 1.0.0 - 21 November 2011
===========================================================================

Here it is, the initial production release of the 1.0 series. This release
includes various fixes and new features to facilitate easy use based on
more extensive testing and real-world development using the framework.

More examples of different patterns exist in Moqui Framework itself, as
well as in add-on projects including Mantle, POP Commerce, and so on.

This release includes:

- All the great features of the preview, beta and rc1 releases
- For field name pattern consistency changed GeoAssoc.geoIdTo to toGeoId,
  StatusValidChange.statusIdTo to toStatusId, and UomConversion.uomIdTo to
  toUomId
- Added support to skip stats tracking based on a conditional expression
- More performance profiling and improvements
  - entity-auto update and delete services no longer do a find first
  - various frequently used objects are cached in UserFacade, especially
    those used for authz and tarpit, making many things faster and cached
    queries around 4 times faster than the already optimized speed
  - many small performance improvements, changes to get around Groovy and
    Java quirks
- Change components to load in reverse of order initialized (later
  components override earlier ones)
- Increased text field sizes (short to 63, medium to 255, long to 4095)
- Changed a bunch of fields from text-long to text-medium that are either
  primary-key fields, or that don't need to be so long, or in entities