@@ -29,10 +29,10 @@ This Work includes contributions authored by David E. Jones, not as a
     </transition>
     <transition name="listSubmit">
         <actions>
-            <if condition="submit=='Delete'"><service-call name="delete#${detailEntityName}" in-map="true"/></if>
+            <if condition="delete"><service-call name="delete#${detailEntityName}" in-map="true"/></if>
         </actions>
         <conditional-response url=".">
-            <condition><expression>buttonName=="Delete"</expression></condition>
+            <condition><expression>delete</expression></condition>
         </conditional-response>
         <default-response url="../AutoEditMaster" parameter-map="ec.entity.getEntityDefinition(detailEntityName).getPrimaryKeys(context)">
             <parameter name="detailEntityName" from="entityName"/>
@@ -54,7 +54,7 @@ This Work includes contributions authored by David E. Jones, not as a
                     <auto-fields-entity entity-name="${detailEntityName}" field-type="edit"/>
                     <field name="entityName"><default-field><hidden/></default-field></field>
                     <field name="detailEntityName"><default-field><hidden/></default-field></field>
-                    <field name="submit"><default-field title="Create"><submit/></default-field></field>
+                    <field name="submitButton"><default-field title="Create"><submit/></default-field></field>
                 </form-single>
             </container-dialog>
         </container>
