@@ -57,13 +57,13 @@ This Work includes contributions authored by David E. Jones, not as a
             <auto-fields-entity entity-name="${entityName}" include="pk" field-type="display"/>
             <auto-fields-entity entity-name="${entityName}" include="nonpk" field-type="edit"/>
             <field name="entityName"><default-field><hidden/></default-field></field>
-            <field name="submit"><default-field title="Update"><submit/></default-field></field>
+            <field name="submitButton"><default-field title="Update"><submit/></default-field></field>
         </form-single>
         <form-single name="ExportMasterEntity" transition="export" dynamic="true">
             <auto-fields-entity entity-name="${entityName}" include="pk" field-type="hidden"/>
             <field name="entityName"><default-field><hidden/></default-field></field>
             <field name="filename"><default-field><text-line size="100"/></default-field></field>
-            <field name="submit"><default-field title="Export with Dependents to File"><submit/></default-field></field>
+            <field name="submitButton"><default-field title="Export with Dependents to File"><submit/></default-field></field>
         </form-single>
     </widgets>
 </screen>
