@@ -41,7 +41,7 @@ This Work includes contributions authored by David E. Jones, not as a
             <form-single name="FilterDbView" transition="filter" dynamic="true">
                 <auto-fields-entity entity-name="${dbViewEntityName}" field-type="find"/>
                 <field name="dbViewEntityName"><default-field><hidden/></default-field></field>
-                <field name="submit"><default-field title="Find"><submit/></default-field></field>
+                <field name="submitButton"><default-field title="Find"><submit/></default-field></field>
             </form-single>
         </container-dialog>
         <form-list name="ViewList" list="dbViewList" dynamic="true">
