@@ -45,7 +45,7 @@ This Work includes contributions authored by David E. Jones, not as a
                     <field name="localized">
                         <default-field><text-area rows="5" cols="60"/></default-field>
                     </field>
-                    <field name="submit"><default-field title="Create"><submit/></default-field></field>
+                    <field name="submitButton"><default-field title="Create"><submit/></default-field></field>
                 </form-single>
             </container-dialog>
         </container>
